# m3ens

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
.svn/: all-wcprops  entries
.svn/text-base/: THANKS.svn-base
animations/: default_animation.yml
animations/.svn/: all-wcprops  entries
animations/.svn/text-base/: m3hand_mh16_postures.yml.svn-base
animations/mouth/.svn/: all-wcprops  entries
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.3
config/.svn/: all-wcprops  entries
doc/.svn/: all-wcprops  entries
include/m3ens/controller_example/: example.h
m3_controllers/: CMakeLists.txt
m3_controllers/src/: factory_proxy.cpp
m4/.svn/: all-wcprops  entries
python/: Makefile  Makefile.am  Makefile.am~  Makefile.in
python/.svn/: all-wcprops  entries
python/.svn/tmp/: Makefile.am.tmp
python/m3ens/: example_pb2.py
python/m3ens/.svn/: all-wcprops  entries
python/m3ens/controller_example/: example.py  m3ens_example.py
python/scripts/: m3ens_demo_arm_beh.py  m3ens_demo_postures.py
python/scripts/.svn/: all-wcprops  entries
python/scripts/demos/: m3ens_demo_arm_beh.py  m3ens_demo_full_beh.py  m3ens_demo_head.py  m3ens_demo_led_matrix.py
real_meka/robot_config/: m3_config.yml  m3_config.yml.bu
real_meka/robot_config/ma17/: m3actuator_ma17_j0.yml  m3actuator_ma17_j1.yml  m3actuator_ma17_j2.yml  m3actuator_ma17_j3.yml  m3actuator_ma17_j4.yml  m3ctrl_simple_ma17_j0.yml  m3ctrl_simple_ma17_j3.yml  m3ctrl_simple_ma17_j4.yml  m3ctrl_simple_ma17_j6.yml  m3dynamatics_right_ma17.yml  m3joint_ma17_j0.yml  m3joint_ma17_j1.yml  m3joint_ma17_j2.yml  m3joint_ma17_j3.yml  m3joint_ma17_j4.yml  m3joint_ma17_j5.yml  m3joint_ma17_j6.yml
real_meka/robot_config/ma20/: m3joint_ma20_j0.yml  m3joint_ma20_j1.yml  m3joint_ma20_j2.yml  m3joint_ma20_j3.yml  m3joint_ma20_j4.yml  m3joint_ma20_j5.yml  m3joint_ma20_j6.yml
real_meka/robot_config/mb2/: meka_omnibase_control_mb2.yml
real_meka/robot_config/mh16/: m3actuator_mh16_j4.yml  m3joint_mh16_j0.yml  m3joint_mh16_j1.yml  m3joint_mh16_j4.yml
real_meka/robot_config/mh16-orig/: m3actuator_mh16_j4.yml  m3joint_mh16_j2.yml
real_meka/robot_config/mh28/: m3joint_mh28_j0.yml  m3joint_mh28_j2.yml  m3joint_mh28_j4.yml
real_meka/robot_config/mr12/: m3humanoid_right_left_arm_head_mr12.yml
real_meka/robot_config/ms4/: m3joint_ms4_j0.yml  m3joint_ms4_j1.yml  m3joint_ms4_j2.yml  m3joint_ms4_j3.yml  m3joint_ms4_j7.yml
robot_config/: m3_config.yml  shm_humanoid_config.yml
robot_config/.svn/: all-wcprops  entries
robot_config/controllers/: m3example_test.yml
robot_config/data/.svn/: all-wcprops  entries
robot_config/ma17/: m3actuator_ec_ma17_j4.yml  m3actuator_ma17_j0.yml  m3actuator_ma17_j0_temps.yml  m3actuator_ma17_j1.yml  m3actuator_ma17_j1_temps.yml  m3actuator_ma17_j2.yml  m3actuator_ma17_j2_temps.yml  m3actuator_ma17_j3.yml  m3actuator_ma17_j3_temps.yml  m3actuator_ma17_j4.yml  m3actuator_ma17_j4_temps.yml  m3actuator_ma17_j5.yml  m3actuator_ma17_j5_temps.yml  m3actuator_ma17_j6.yml  m3actuator_ma17_j6_temps.yml  m3ctrl_simple_ma17_j0.yml  m3ctrl_simple_ma17_j2.yml  m3ctrl_simple_ma17_j5.yml  m3ctrl_simple_ma17_j6.yml  m3dynamatics_right_h2R4_ma17.yml  m3dynamatics_right_ma17.yml  m3joint_ma17_j0.yml  m3joint_ma17_j1.yml  m3joint_ma17_j2.yml  m3joint_ma17_j3.yml  m3joint_ma17_j4.yml  m3joint_ma17_j5.yml  m3joint_ma17_j6.yml
robot_config/ma17-orig/: m3actuator_ma17_j1_temps.yml  m3actuator_ma17_j3_temps.yml  m3actuator_ma17_j4_temps.yml  m3actuator_ma17_j6_temps.yml  m3dynamatics_right_ma17.yml
robot_config/ma17/.svn/: all-wcprops  entries
robot_config/ma20/: m3actuator_ma20_j0.yml  m3actuator_ma20_j1.yml  m3ctrl_simple_ma20_j0.yml  m3ctrl_simple_ma20_j1.yml  m3dynamatics_left_h2R5_fts_ma20.yml  m3dynamatics_left_h2R5_ma20.yml  m3dynamatics_left_ma20.yml  m3joint_ma20_j0.yml  m3joint_ma20_j1.yml  m3joint_ma20_j2.yml  m3joint_ma20_j3.yml  m3joint_ma20_j5.yml  m3joint_ma20_j6.yml
robot_config/mb2/: m3actuator_mb2_j0_temps.yml  m3actuator_mb2_j7_temps.yml
robot_config/mb2/.svn/: all-wcprops  entries
robot_config/mh16/: m3actuator_ec_mh16_j1.yml  m3actuator_mh16_j0.yml  m3actuator_mh16_j0_temps.yml  m3actuator_mh16_j1_temps.yml  m3actuator_mh16_j2.yml  m3actuator_mh16_j2_temps.yml  m3actuator_mh16_j3.yml  m3actuator_mh16_j3_temps.yml  m3actuator_mh16_j4.yml  m3actuator_mh16_j4_temps.yml  m3joint_mh16_j2.yml  m3joint_mh16_j3.yml
robot_config/mh16-orig/: m3actuator_mh16_j1.yml  m3actuator_mh16_j2.yml  m3joint_mh16_j1.yml
robot_config/mh16/.svn/: all-wcprops  entries
robot_config/mr12/: m3humanoid_shm12.yml
robot_config/mr12/.svn/: all-wcprops  entries
robot_config/ms4/: m3actuator_ms4_j0_temps.yml  m3actuator_ms4_j1_temps.yml  m3actuator_ms4_j2_temps.yml  m3actuator_ms4_j3_temps.yml  m3actuator_ms4_j4_temps.yml  m3actuator_ms4_j5_temps.yml  m3actuator_ms4_j6_temps.yml  m3actuator_ms4_j7.yml  m3actuator_ms4_j7_temps.yml  m3dynamatics_s2r1_ens_ms4.yml  m3head_ms4.yml  m3head_s2csp_ctrl_ms4.yml  m3led_matrix_ec_ms4_l0.yml
robot_config/ms4/.svn/: all-wcprops  entries
robot_config/mz2/.svn/: all-wcprops  entries
robot_config/pwr/.svn/: all-wcprops  entries
robot_config/ros/.svn/: all-wcprops  entries
robot_config/shm/.svn/: entries
robot_configBAK/.svn/: all-wcprops  entries
robot_configBAK/.svn/tmp/: m3_config.yml.tmp
robot_configBAK/ma17/: m3actuator_ma17_j0.yml  m3actuator_ma17_j4.yml  m3actuator_ma17_j5.yml  m3actuator_ma17_j6.yml  m3joint_ma17_j1.yml  m3joint_ma17_j2.yml  m3joint_ma17_j4.yml
robot_configBAK/mb2/.svn/: all-wcprops  entries
robot_configBAK/mh16/.svn/: all-wcprops  entries
robot_log/: m3rt_server.log.0  m3rt_server.log.1  m3rt_server.log.2
robot_log/.svn/: all-wcprops  entries
ros_config/: joy.launch~
ros_config/.svn/: all-wcprops  entries
ros_config/cameras/: m3cameras_topics.yml
ros_config/kinect/: m3kinect_topics.yml
src/.svn/: all-wcprops  entries
src/m3ens/: CMakeLists.txt
virtual_meka/robot_config/: m3_config.yml
(+69 files in other folders)
